# apsak-ng

./: .gitignore  Cargo.toml  LICENSE  README.md  build-adapter  build-chrome
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy.yaml
app/: Cargo.toml  index.html  manifest.json  pwa.js
app/src/: main.rs
core/: Cargo.toml
core/resources/: Servers.toml
core/resources/i18n/: i18n.json
core/src/: app.rs  collection.rs  core.rs  error.rs  events.rs  imports.rs  lib.rs  menu.rs  network.rs  settings.rs  state.rs  status.rs  storage.rs  sync.rs
core/src/egui/: mnemonic.rs
core/src/egui/theme/: color.rs  mod.rs
core/src/interop/: client.rs  transport.rs
core/src/modules/: account_create.rs  block_dag.rs  donations.rs  export.rs  import.rs  logs.rs  metrics.rs  mod.rs  node.rs  overview.rs  private_key_create.rs  request.rs  scanner.rs  testing.rs  wallet_create.rs  welcome.rs
core/src/modules/account_manager/: balance.rs  estimator.rs  menus.rs  mod.rs  network.rs  processor.rs  transfer.rs
core/src/modules/settings/: mod.rs
core/src/primitives/: account.rs  block.rs  transaction.rs
core/src/runtime/: mod.rs  panic.rs  signals.rs  system.rs
core/src/runtime/services/: blockdag_monitor.rs  metrics_monitor.rs  mod.rs  peer_monitor.rs
core/src/runtime/services/apsak/: mod.rs  (+3 more)
core/src/tests/: transactions.rs
core/src/utils/: format.rs  i18n.rs  math.rs  version.rs
extensions/chrome/: Cargo.toml  api.js  background.js  content-script.js  manifest.json  popup.html  popup.js  pwa.js  style.css  trunk.html
extensions/chrome/src/: client.rs  imports.rs  lib.rs  server.rs  transport.rs
macros/: Cargo.toml
(+2 files in other folders)
