[package]
name = "apsak-ng"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "apsaK NG - Desktop p2p node based on Rusty apsaK"
readme = "../README.md"

[features]
console = []

[dependencies]
apsak-ng-core.workspace = true
workflow-log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
apsak-alloc.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
